syntax = 'proto3';

package chat_proto;

// 時間都以 uint64 來表示 unix time

message ClientSendData {
    int64 id = 1;
    oneof Data {
        Send send = 2;
        History history = 3;
        RecentChat recent_chat = 4;
    }
}

message ServerSendMeta {
    int64 id = 1;
    oneof Data {
        Incoming incoming = 2;
    }
}

// 常用結構
message Message {
    // 每則訊息在它所屬的聊天室／頻道中都有一個獨一無二的 id
    int64 id = 1;
    int64 sender_id = 2;
    string content = 3;
    uint64 time = 4;
}

message ChannelLocation {
    bool is_upgraded = 1;
    int64 channel_id = 2;
}

// 以下 API 由伺服器端發出
message Incoming {
    oneof Location {
        ChannelLocation channel_location = 1;
        int64 direct_receiver_id = 2;
    }
    Message message = 3;
}

message IncomingResponse {
    bool ok = 1;
    string reason = 2;
}

// 以下 API 由客戶端主動發出

// websocket 一連通就發出
// 獲取時間在 before_time 之前的 number 個對話
message RecentChat {
    int64 number = 1;
    uint64 before_time = 2;
}

message RecentChatResponse {
    // 一個聊天室的摘要
    // 用來顯示最近對話
    message ChatAbstract {
        message DirectChat {
            int64 direct_chat_id = 1;
            string latest_message = 2;
        }
        message GroupChat {
            int64 group_chat_id = 1;
            string latest_message = 2;
        }
        message UpgradedGroupChat {
            int64 group_chat_id = 1;
            repeated string channel_names = 2;
        }
        oneof Info {
            DirectChat simple_chat = 1;
            GroupChat group_chat = 2;
            UpgradedGroupChat upgraded_group_chat = 3;
        }
    }
    bool ok = 1;
    string reason = 2;
    repeated ChatAbstract chats = 3;
}

message Send {
    oneof Location {
        ChannelLocation channel_location = 1;
        int64 direct_receiver_id = 2;
    }
    string content = 3;
}

message SendResponse {
    bool ok = 1;
    string reason = 2;
}

message History {
    oneof Location {
        ChannelLocation channel_location = 1;
        int64 direct_receiver_id = 2;
    }
    // 若 before_id = -1 ，則代表請求最新的對話
    // 每個對話都有自己的 id ，我們要拿的是在此 before_id 之前的 number 個對話
    int64 before_id = 3;
    int64 number = 4;
}

message HistoryResponse {
    bool ok = 1;
    string reason = 2;
    repeated Message messages = 3;
}